--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -127,6 +127,8 @@ button.primary {
 }
 button.block {
   width: 100%;
+  height: 50px;
+  font-size: 1.5rem !important;
 }
 button.small {
   font-size: 1.2rem;
@@ -160,6 +162,8 @@ a.brand {
 }
 .row.top {
   align-items: flex-start;
+  margin-top: 60px;
+  margin-left: 60px;
 }
 .row.start {
   justify-content: flex-start;
@@ -176,6 +180,12 @@ a.brand {
 
 .p-1 {
   padding: 1rem;
+}
+.p-3{
+  padding: 3rem;
+}
+.mr-3{
+  margin-right: 30px;
 }
 
 /* Image */
@@ -238,6 +248,7 @@ img.large {
   background-color: #f8f8f8;
   border-radius: 0.5rem;
   margin: 1rem;
+  text-align: center;
 }
 .card-body {
   padding: 1rem;
@@ -249,13 +260,47 @@ img.large {
   font-size: 2rem;
   color: black !important;
 }
+.productNameCard{
+  text-align: center;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+.productNameCard:hover{
+  color: #F66249;
+}
+
+.priceCard{
+  /* text-align: center; */
+  color: black !important;
+  font-size: 20px;
+}
+.alignCenter{
+  text-align: center !important;
+}
+.cardProductScreen{
+  display: inline-block !important;
+}
+.btnAddtoCart{
+  width: 100%;
+  height: 50px;
+  font-size: 20px !important;
+}
+
+
+/* Review Area */
+.reviewArea{
+  margin-top: 20px;
+  margin-left: 60px;
+}
 /* Rating */
 .rating span {
-  color: #f0c040;
+  color: #F66249;
+  font-weight: bold;
   margin: 0.1rem;
 }
 .rating span:last-child {
-  color: #f0c040;
+  color: #F66249 !important;
 }
 /* Alert */
 .loading {
@@ -320,15 +365,25 @@ img.large {
 }
 /* Checkout Steps */
 .checkout-steps > div {
-  border-top: 0.3rem #c0c0c0 solid;
-  color: #c0c0c0;
+  border-top: 0.3rem #F43818 solid;
+  color: #F43818;
   flex: 1;
   padding: 1rem;
   font-weight: bold;
+  margin-left: 90px;
 }
 .checkout-steps > div.active {
   border-top-color: #f08000;
   color: #f08000;
+}
+.activeCK{
+  color: #F43818 !important;
+  font-weight: bolder;
+}
+.centerText{
+  text-align: center;
+  color: #F43818;
+  font-weight: bolder;
 }
 /* Table */
 .table {
@@ -405,7 +460,7 @@ img.large {
   cursor: pointer;
 }
 .menuHeader{
-  max-width: 1519px;
+  max-width: 1520px;
   padding-left: 60px;
   padding-right: 60px;
   height: inherit;
@@ -477,20 +532,19 @@ img.large {
 
 /* Cart Screen */
 .cart-Label{
+  margin-top: 30px !important;
   text-align: center;
   text-emphasis: unset;
-  color: yellow !important;
+  color: #a02020 !important;
   font-family: fantasy;
   font-weight: bold;
-  text-shadow: 2px 2px 5px #ff8000;
 }
 
 .cartProductName{
-  color: white !important;
+  color:#25262B !important;
 }
 .selectItem{
   position: absolute;
-  background-color: blanchedalmond;
   right: 200px;
   cursor: pointer;
 }
@@ -498,26 +552,36 @@ img.large {
 .itemPrice{
   position: absolute;
   right: 120px;
-  color: #f0c040 !important;
+  color: black !important;
   font-weight: bold;
 }
 .goShopping{
-  color: #f08000 !important;
+  color: #F43818 !important;
 }
 .labelResult{
-  color: #e0e0ff !important;
+  color: #2B2E34 !important;
 }
  /* SearchResultScreen */
 .nameCategory{
-  color: yellow !important;
+  color: #F43818 !important;
+}
+.activeName{
+  color: #ca1e00 !important;
+  font-weight: bolder;
+}
+.namePrice{
+  color: #F43818 !important;
 }
 .textCategory{
-  color: #e78e18;
+  color: #2B2E34;
   font-weight: bolder;
 
 }
+.mt-20{
+  margin-top: 20px;
+}
 .noProduct{
-  color: #e78e18 !important;
+  color: #F43818 !important;
   font-size: 3rem !important;
 
   font-weight: bolder !important;
@@ -535,7 +599,7 @@ img.large {
   position: absolute;
   left: 8px;
   width: 16px;
-  background: rgb(228, 198, 30);
+  background: #a02020;
   animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 .lds-facebook div:nth-child(1) {
@@ -563,8 +627,8 @@ img.large {
 
 /* ProductScreen */
 .description{
-  color:#f4f4f4;
-  font-size: 1.5rem;
+  color: #717171;
+  font-size: 1.2rem;
 }
 .reviewMess{
   margin: 1rem !important;
@@ -575,21 +639,31 @@ img.large {
   width: 50% !important;
   border: 3px solid white !important;
   padding: 10px !important;
+  margin-top: 30px !important;
+  margin-bottom: 50px !important;
 }
 .pt-1{
   padding-top: 1rem !important;
 }
 .userReview{
-  color: #e0e0ff !important;
+  color: black !important;
   font-size: 1rem;
   font-weight: bold;
+}
+.reviewContent{
+  color: #717171 !important;
 }
 .lighterText{
   color: #a4a4a4 !important;
   font-size: 0.8rem !important;
 }
+.textRating{
+  font-size: 1.2rem !important;
+  color: #2B2E34 !important;
+}
+
 .hoverBtn:hover{
-  background-color  : #f0c040 !important;
+  background-color  : #F43818 !important;
 }
 .textAlign{
   text-align:right !important;
@@ -621,6 +695,95 @@ img.large {
 }
 .pagination a.active {
   font-weight: bold;
+  color: #F66249 !important;
+}
+/* Search Resutl Screen */
+.ml-60{
+  margin-left: 60px;
+}
+.mr-60{
+  margin-right: 60px;
+}
+.numProduct{
+  color: #F66249 !important;
+  font-weight: bold;
+}
+.textSort{
+  font-size: 1.5rem;
 }
 
+.box select {
+  background-color: #2B2E34;
+  color: white;
+  padding: 12px;
+  width: 250px;
+  border: none;
+  font-size: 15px;
+  box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+  -webkit-appearance: button;
+  appearance: button;
+  outline: none;
+}
 
+.box select option {
+  padding: 30px;
+}
+
+.centerItem{
+  margin: auto !important;
+}
+/* Shipping Address */
+.containerForm{
+  background-color: #e4e4e4;
+  padding-bottom: 10px;
+}
+.containerForm label{
+ font-weight: bolder;
+}
+.namePayMethod{
+  font-weight: bold;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.radioBt{
+  margin-right: 5px;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+.textWhite{
+  color: #FFFFFF;
+}
+
+/* Place Order Screen */
+.card-placeorder {
+  border: 0.1rem #c0c0c0 solid;
+  background-color: #f8f8f8;
+  border-radius: 0.5rem;
+  margin: 1rem;
+}
+.card-body-placeorder {
+  padding: 1rem;
+}
+.card-body-placeorder > * {
+  margin-bottom: 0.5rem;
+}
+.card-placeorder h2{
+  color: #F66249;
+}
+.card-placeorder a{
+  color: #2B2E34;
+  font-weight: bold;
+}
+.textLb{
+  color: #F66249;
+  font-weight: bold;
+}
+.ml-30{
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.nameOrder{
+  margin-top: 30px !important;
+  margin-left: 70px;
+}
