--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -144,11 +144,12 @@ a.brand {
   font-weight: bold;
 }
 .badge {
-  background-color: transparent;
+  background-color: red;
   color: #ffffff;
   border-radius: 50%;
   padding: 0.2rem 0.7rem;
   font-size: 1.4rem;
+  font-weight: bold;
   margin-left: 0.2rem;
 }
 .row {
@@ -365,24 +366,24 @@ img.large {
 }
 /* Checkout Steps */
 .checkout-steps > div {
-  border-top: 0.3rem #F43818 solid;
-  color: #F43818;
+  border-top: 0.6rem #bbacaa solid;
+  /* color: #F43818; */
   flex: 1;
   padding: 1rem;
   font-weight: bold;
   margin-left: 90px;
 }
-.checkout-steps > div.active {
-  border-top-color: #f08000;
-  color: #f08000;
+.checkout-steps > div.activeCK {
+  border-top-color: #F43818;
+  color: #F43818;
 }
 .activeCK{
-  color: #F43818 !important;
+  color: #a02020 !important;
   font-weight: bolder;
 }
 .centerText{
   text-align: center;
-  color: #F43818;
+  color: #a02020;
   font-weight: bolder;
 }
 /* Table */
@@ -398,6 +399,9 @@ img.large {
   text-align: left;
   border: 0.1rem solid #e4e4e4;
   padding: 0.5rem;
+}
+.table th {
+  font-weight: bold;
 }
 .table button {
   margin: 0 0.2rem;
@@ -452,11 +456,11 @@ img.large {
   font-family: fantasy;
   font-size: 3rem;
   font-weight: bold;
-  text-shadow: 2px 2px 5px #F43818;
+  text-shadow: 2px 2px 5px #a02020;
 }
 .brandName:hover{
   color: wheat !important;
-  text-shadow: 2px 2px 5px #F43818;
+  text-shadow: 2px 2px 5px #a02020;
   cursor: pointer;
 }
 .menuHeader{
@@ -471,6 +475,14 @@ img.large {
   position: absolute;
   left: 70px;
   top: -23px;
+}
+.btnSignin :hover{
+  color: wheat;
+}
+.linkText{
+  color: wheat;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 .txtDropdown{
   font-weight: bold;
@@ -556,21 +568,21 @@ img.large {
   font-weight: bold;
 }
 .goShopping{
-  color: #F43818 !important;
+  color: #a02020 !important;
 }
 .labelResult{
   color: #2B2E34 !important;
 }
  /* SearchResultScreen */
 .nameCategory{
-  color: #F43818 !important;
+  color: #a02020 !important;
 }
 .activeName{
-  color: #ca1e00 !important;
+  color: #a02020 !important;
   font-weight: bolder;
 }
 .namePrice{
-  color: #F43818 !important;
+  color: #a02020 !important;
 }
 .textCategory{
   color: #2B2E34;
@@ -578,10 +590,10 @@ img.large {
 
 }
 .mt-20{
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
 .noProduct{
-  color: #F43818 !important;
+  color: #a02020 !important;
   font-size: 3rem !important;
 
   font-weight: bolder !important;
@@ -705,7 +717,7 @@ img.large {
   margin-right: 60px;
 }
 .numProduct{
-  color: #F66249 !important;
+  color: #a02020 !important;
   font-weight: bold;
 }
 .textSort{
@@ -736,6 +748,8 @@ img.large {
 .containerForm{
   background-color: #e4e4e4;
   padding-bottom: 10px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 .containerForm label{
  font-weight: bolder;
@@ -769,14 +783,14 @@ img.large {
   margin-bottom: 0.5rem;
 }
 .card-placeorder h2{
-  color: #F66249;
+  color: #a02020;
 }
 .card-placeorder a{
   color: #2B2E34;
   font-weight: bold;
 }
 .textLb{
-  color: #F66249;
+  color: #a02020;
   font-weight: bold;
 }
 .ml-30{
@@ -786,4 +800,24 @@ img.large {
 .nameOrder{
   margin-top: 30px !important;
   margin-left: 70px;
+}
+/* product List Screen */
+.btnCreateProduct{
+  float: right;
+  margin-bottom: 30px;
+
+}
+/* product Edit Screen */
+.inputChooseImg{
+  color: #a02020;
+  font-weight: bold;
+}
+/* User Edit Screen */
+.inLine{
+  display: inline !important;
+}
+.inLine input{
+  margin-right: 20px;
+  width: 20px;
+  height: 18px;
 }
