--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,7 +37,7 @@ menuTop {
 }
 .navbar{
   grid-area: navbar;
-  /* height: 4rem; */
+  height: 4rem;
   background-color: white;
   margin-bottom: 0px !important;
 }
@@ -146,10 +146,8 @@ a.brand {
   font-weight: bold;
 }
 .badge {
-  position: absolute;
-  left: 60px;
-  background-color: #ffffff;
-  color: red;
+  background-color: red;
+  color: #ffffff;
   border-radius: 50%;
   padding: 0.2rem 0.7rem;
   font-size: 1.4rem;
@@ -382,8 +380,7 @@ img.large {
   flex: 1;
   padding: 1rem;
   font-weight: bold;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 90px;
 }
 .checkout-steps > div.activeCK {
   border-top-color: #F43818;
@@ -477,10 +474,9 @@ img.large {
 }
 .menuHeader{
   max-width: 1520px;
-
   padding-left: 60px;
   padding-right: 60px;
-  height: 114px;
+  height: inherit;
 
 }
 
@@ -506,7 +502,7 @@ img.large {
   left: 150px;
   right: 60px;
   width: 150px;
-  top: -5px;
+  top: -15px;
 }
 .iconCart{
   position: absolute;
@@ -601,7 +597,6 @@ img.large {
 .textCategory{
   color: #2B2E34;
   font-weight: bolder;
-  font-size: 3rem;
 
 }
 .mt-20{
@@ -958,7 +953,7 @@ img.large {
 
  /* footer */
  .footerContainer{
-  position: static;
+  position: relative;
   left: 0;
   bottom: 0;
   /* background-color: #2B2E34; */
@@ -1001,8 +996,4 @@ img.large {
 }
 .linkWhite:hover{
   color: #f02020 !important;
-}
-
-.containerCart{
-  min-height: 1000px !important;
 }
