--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -477,7 +477,7 @@ img.large {
   padding-left: 60px;
   padding-right: 60px;
   height: 128px !important;
-  background-color: #2B2E34;
+  background-color: #2B2E34 !important;
 
 }
 
