--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -62,6 +62,8 @@ menuTop {
 .containerNavbar{
   margin-left: 60px !important;
   margin-right: 60px !important;
+  font-size: 1.5rem !important ;
+
 }
 .textNav{
   font-weight: bold;
@@ -146,8 +148,10 @@ a.brand {
   font-weight: bold;
 }
 .badge {
-  background-color: red;
-  color: #ffffff;
+  position: absolute;
+  left: 55px;
+  background-color: #ffffff;
+  color: red;
   border-radius: 50%;
   padding: 0.2rem 0.7rem;
   font-size: 1.4rem;
@@ -461,6 +465,7 @@ img.large {
 
 .brandName{
   margin-left: 0.5em;
+  top: 20px;
   color:white !important;
   font-family: fantasy;
   font-size: 3rem;
@@ -473,7 +478,7 @@ img.large {
   cursor: pointer;
 }
 .menuHeader{
-  max-width: 1520px;
+  max-width: 2025px;
   padding-left: 60px;
   padding-right: 60px;
   height: 128px !important;
