--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1025,3 +1025,97 @@ img.large {
 .headerChatPopup{
   font-size: 1.5rem !important;
 }
+
+/* Chat */
+
+
+
+  
+  
+  .chat-history {
+    padding: 30px 30px 20px;
+    border-bottom: 2px solid white;
+    overflow-y: scroll;
+  }
+
+  .other-message {
+    background: #D8DADF;
+  }
+  
+  .my-message {
+    background: #e25e3d;
+    margin-right: 10px;
+    color: white !important;
+  }
+
+  .my-message::after {
+    border-bottom-color: #e25e3d !important;
+    left: 93% !important;
+    
+  }
+
+  .message {      
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: black;
+    padding: 10px 15px;
+    font-size: 16px;
+    border-radius: 7px;
+    /* margin-bottom: 5px; */
+    width: 80%;
+    position: relative;
+  }
+
+  .message::after {
+    bottom: 100%;
+    left: 7%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-bottom-color: #D8DADF;
+    border-width: 10px;
+    margin-left: -10px;
+  }
+
+
+
+.align-left {
+  text-align: left;
+}
+
+.align-right {
+  text-align: right;
+}
+
+.float-right {
+  float: right;
+}
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+}
+.message-data {
+  margin-bottom: 8px;
+
+}
+
+.mess-div{
+  margin-top: 60px;
+}
+
+.mess-mutichat{
+  padding-top: 60px !important;
+}
+.not-me{
+  color: #D8DADF;
+}
+.me{
+ color: #e25e3d;
+}
