--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -741,7 +741,7 @@ img.large {
 }
 
 .box select {
-  background-color: #2B2E34;
+  background-color: #777785;
   color: white;
   padding: 12px;
   width: 250px;
