--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -241,9 +241,11 @@ img.large {
   display: inline-block !important;
 }
 .imgCarousel{
-  display: inline-block;
-  width: 300px;
-  height: 300px;
+  /* width: 100%; */
+
+  height: 348px !important; 
+  min-height: 348px !important;
+  object-fit: cover;
 }
 .imgCRS{
   background-image: url('image/carouselBR.png');
@@ -596,9 +598,11 @@ img.large {
 .activeName{
   color: #790000 !important;
   font-weight: bolder;
+
 }
 .namePrice{
   color: #a02020 !important;
+  font-size: 1rem;
 }
 .textCategory{
   color: #2B2E34;
