--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,6 +45,7 @@ menuTop {
   height: 4rem;
   background-color: white;
   margin-bottom: 0px !important;
+  
 }
 .colorNavbar{
   background-color: #2B2E34 !important;
@@ -53,6 +54,7 @@ menuTop {
   padding: 1.7px !important;
   margin-left: -3px !important;
   margin-right: -3px !important;
+  text-align: center;
 }
 .dividerLine{
   background-color: rgb(121, 121, 121);
@@ -65,14 +67,19 @@ menuTop {
   margin-right: 60px !important;
 }
 .containerNavbar{
-  margin-left: 60px !important;
-  margin-right: 60px !important;
+  margin-left: 12px !important;
+  /* margin-right: 60px !important; */
   font-size: 1.5rem !important ;
+  display: inline-flex !important;
 
+}
+.space{
+  width: 900px;
 }
 .textNav{
   font-weight: bold;
 }
+
 main {
   grid-area: main;
   background-color: white;
@@ -244,10 +251,11 @@ img.large {
 .carousel{
   width: fit-content;
   max-width: 1530px;
-  height: 300px;
+  height: 310px;
   justify-content: center;
   margin: 0px !important;
   padding: 0px !important;
+  background-color: lightcoral !important;
   
 }
 .slick-slide img {
@@ -497,8 +505,9 @@ img.large {
 }
 .menuHeader{
   max-width: 2025px;
-  padding-left: 60px;
-  padding-right: 60px;
+  width: 1290px;
+  /* padding-left: 10px; */
+  /* padding-right: 20px; */
   height: 128px !important;
   background-color: #2B2E34 !important;
 
@@ -506,7 +515,7 @@ img.large {
 
 .btnSignin{
   position: absolute;
-  left: 70px;
+  left: 60px;
   top: -30px;
 }
 .btnSignin :hover{
