--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1279,6 +1279,6 @@ img.large {
 .btnSelectUser{
   border-radius: 10px !important;
 }
-.testUI{
-  color: #000000;
+.text-left{
+  text-align: left;
 }
